--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.9.3",
+    "antd": "^3.16.5",
     "mdi-material-ui": "^5.11.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
