--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "dependencies": {
     "@material-ui/core": "^3.9.3",
     "antd": "^3.16.5",
+    "bootstrap": "^4.3.1",
     "mdi-material-ui": "^5.11.0",
     "react": "^16.8.6",
     "react-document-title": "^2.0.3",
     "react-dom": "^16.8.6",
     "react-favicon": "0.0.14",
+    "react-full-screen": "^0.2.4",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-router-transition": "^1.3.0",
@@ -36,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "prettier": "1.17.0"
   }
 }
