--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "antd": "^3.16.5",
     "bootstrap": "^4.3.1",
     "mdi-material-ui": "^5.11.0",
+    "query-string": "^6.4.2",
     "react": "^16.8.6",
     "react-document-title": "^2.0.3",
     "react-dom": "^16.8.6",
