--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "react-dom": "^16.8.6",
     "react-favicon": "0.0.14",
     "react-full-screen": "^0.2.4",
+    "react-redux": "^7.0.2",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-router-transition": "^1.3.0",
     "react-scripts": "3.0.0",
+    "redux": "^4.0.1",
     "styled-components": "^4.2.0"
   },
   "scripts": {
