--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^3.9.3",
     "antd": "^3.16.5",
     "bootstrap": "^4.3.1",
+    "glamor": "^2.20.40",
     "lodash": "^4.17.11",
     "mdi-material-ui": "^5.11.0",
     "query-string": "^6.4.2",
